Updates to content
Updated about me and title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="icon" type="image/png" href="img/favicon.png" />
 
-	<title>Cartography &amp; Design</title>
+	<title>Calla Little Cartography &amp; Design</title>
 
 	<!--fonts and icons-->
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Raleway:400,900i|Jockey+One" rel="stylesheet">
@@ -39,18 +39,16 @@
  				<h2>What I Do</h2>
  			</div>
  		</div>
- 		<div class="row">
- 			<div class="col">
+ 		<div class="row justify-content-center">
+ 			<div class="col-xl-8 text-center">
 	 			<p>
-	 				I am a cartographer, designer, and developer.
-	 			</p>
-	 			<p>
-	 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at magna nec neque dictum ornare sit amet id justo. Donec ac nisl imperdiet velit posuere consectetur eget sit amet nibh. Fusce ut arcu lacinia, scelerisque neque quis, porttitor risus. Morbi eu commodo lectus. Fusce consequat dignissim quam, at convallis ipsum. Vivamus semper mi nec porta euismod. In auctor leo massa, eu eleifend tellus tempor eu.
+	 				I am a cartographer, designer, and developer located in Madison, Wisconsin. I am interested in visualizing complex data in an informative and aesthetically pleasing way. I have BS in Cart/GIS and Physical Geography from the University of Wisconsin &ndash; Madison. 
 	 			</p>
 	 		</div>
  		</div>
  		<div class="row">
  			<div class="col">
+ 				<!-- <h6 class="text-center">Tools I Use</h6> -->
 	 			<ul class="list-inline list-icons text-center">
 		            <li class="list-inline-item">
 		              <i class="devicon-bootstrap-plain-wordmark"></i>
@@ -258,9 +256,9 @@
 		              <a href="https://github.com/CallaLittle">
 		              	<i class="fab fa-github-square"></i>
 		              </a>
-		              <a href="https://open.spotify.com/user/clittle723">
+		              <!-- <a href="https://open.spotify.com/user/clittle723">
 		              	<i class="fab fa-spotify"></i>
-		              </a>
+		              </a> -->
 		            </li>
 		        </ul>
 		        <h6>&copy; Calla Little 2018
