Preview thumbnail added
Added image for OGP preview

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="author" content="Calla Little">
 	<meta name="description" content="CL Custom Cartgraphy &amp; Design">
 
+	<meta property='og:image' content='/img/ogp-thumbnail.png'>
+
 	<link rel="icon" type="image/png" href="img/favicon.png" />
 
 	<title>Calla Little Cartography &amp; Design</title>
