Set max width on background to fix display on high res screens

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta keywords-"custom cartography, calla little resume, custom gis developer, remote sensing analyst, freelance cartographer, interactive mapping solutions, custom web map designer, web map developer, graphic design for nonprofits, freelance web developer">
+	<meta keywords="custom cartography, calla little resume, custom gis developer, remote sensing analyst, freelance cartographer, interactive mapping solutions, custom web map designer, web map developer, graphic design for nonprofits, freelance web developer">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Calla Little">
 	<meta name="description" content="CL Custom Cartgraphy &amp; Design">
