Add current job

--- a/index.html
+++ b/index.html
@@ -104,6 +104,26 @@
  		</div>
  		<div class="row align-items-end">
  			<div class="col-sm-6">
+ 				<h5>Parking Asset &amp; GIS Coordinator</h5>
+ 				<h6>City of Madison Parking Utility</h6>
+ 			</div>
+ 			<div class="col-sm-6 text-sm-right">
+ 				<h6>August 2018 &mdash; Present</h6>
+ 			</div>
+ 		</div>
+ 		<div class="row">
+ 			<div class="col">
+	 			<ul>
+	 				<li>Oversee and manage the development, implementation, and maintenance of the Parking Utility's GIS Database</li>
+	 				<li>Oversee selection of hardware and software as it pertains to GIS</li>
+					<li>Oversee and manage the development, implementation, and maintenance of the Parking Utility Computerized Maintenance Management System (CMMS)</li>
+					<li>Oversee and manage the development, implementation, maintenance, and web publishing of public parking data</li>
+					<li>Prepare special figures, designs, layouts, graphics, and maps.</li>
+	 			</ul>
+	 		</div>
+ 		</div>
+ 		<div class="row align-items-end">
+ 			<div class="col-sm-6">
  				<h5>Cartographer &amp; GIS Technician</h5>
  				<h6>Fishing Hot Spots</h6>
  			</div>
