Updated website links, current job duties

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  		<div class="row justify-content-center">
  			<div class="col-xl-8 text-center">
 	 			<p>
-	 				I am a cartographer, designer, and developer located in Madison, Wisconsin. I am interested in visualizing complex data in an informative and aesthetically pleasing way. I have BS in Cart/GIS and Physical Geography from the University of Wisconsin &ndash; Madison. 
+					I am a GIS professional who loves programming, cartography, remote sensing, and data analysis. I like challenging environments that encourage me to learn new skills. In my free time I enjoy participating in citizen science, camping, hiking, lazing about outdoors, making stuff, playing with my border collie, and dreaming up tools I think I could build but probably never will.
 	 			</p>
 	 		</div>
  		</div>
@@ -104,8 +104,8 @@
  		</div>
  		<div class="row align-items-end">
  			<div class="col-sm-6">
- 				<h5>Parking Asset &amp; GIS Coordinator</h5>
- 				<h6>City of Madison Parking Utility</h6>
+ 				<h5>Asset &amp; GIS Coordinator</h5>
+ 				<h6>City of Madison Parking Division</h6>
  			</div>
  			<div class="col-sm-6 text-sm-right">
  				<h6>August 2018 &mdash; Present</h6>
@@ -114,11 +114,16 @@
  		<div class="row">
  			<div class="col">
 	 			<ul>
-	 				<li>Oversee and manage the development, implementation, and maintenance of the Parking Utility's GIS Database</li>
-	 				<li>Oversee selection of hardware and software as it pertains to GIS</li>
-					<li>Oversee and manage the development, implementation, and maintenance of the Parking Utility Computerized Maintenance Management System (CMMS)</li>
-					<li>Oversee and manage the development, implementation, maintenance, and web publishing of public parking data</li>
-					<li>Prepare special figures, designs, layouts, graphics, and maps.</li>
+					<li>Replace legacy systems, processes, and software with new technology</li>
+					<li>Research methods and advances in GIS</li>
+					<li>Directly supervise GIS technician; prioritize work, mentor, perform reviews, hiring, and discipline </li>
+					<li>Coordinate system integrations, increasing efficiency in operations through spatial and non-spatial data sharing</li>
+					<li>Oversee and manage open data, map services, and web mapping</li>
+					<li>Model and document relational databases, oversee the conversion of data to new structures</li>
+					<li>Develop methods to allow non-technical users to edit relational databases</li>
+					<li>Respond to requests for maps, reports, and visualizations related to division data</li>
+					<li>Lead distributed project teams through various implementations</li>
+					
 	 			</ul>
 	 		</div>
  		</div>
@@ -134,11 +139,15 @@
  		<div class="row">
  			<div class="col">
 	 			<ul>
-	 				<li>Redeveloped the <a href="https://www.fishinghotspots.com" target="_blank">company website</a></li>
-	 				<li>Modernized company graphics and design methods</li>
-					<li>Ensured product integrity by performing QA maps and data</li>
-					<li>Created and prepared maps and graphics for the printer</li>
+					<li>Redeveloped the <a href="https://www.fishinghotspots.com" target="_blank">company website</a></li>
+					<li>Administered production web server, configured test web server on AWS</li>
+					<li>Managed Google Analytics account</li>
+					<li>Collected data from various sources to create comprehensive and detailed large scale maps, including shoreline, depth, and vegetation data</li>
+					<li>Transformed data into standard database schema</li>
+					<li>Ensured product integrity by performing QA/QC maps and data</li>
 					<li>Improved documentation of cartographic and GIS procedures</li>
+					<li>Modernized company graphics and design methods</li>
+					<li>Designed and laid out print production ready maps, coordinated files and schedule with printer</li>
 	 			</ul>
 	 		</div>
  		</div>
@@ -154,8 +163,8 @@
  		<div class="row">
  			<div class="col">
 	 			<ul>
-	 				<li>Created maps of Door County for Wisconsin Public Television's <a href="https://wpt.org/Wisconsin-Hometown-Stories/207077/wisconsin-hometown-stories-door-county" target="_blank">Hometown Stories series</a></li>
-	 				<li>Worked with University Ridge Golf Course to make a custom <a href="http://www.universityridge.com/cross-country-skiiing/high-res-map" target="blank">xc ski trail map</a></li>
+	 				<li>Created maps of Door County for Wisconsin Public Television's <a href="https://pbswisconsin.org/watch/wisconsin-hometown-stories/wisconsin-hometown-stories-wisconsin-hometown-stories-door-county/" target="_blank">Hometown Stories series</a></li>
+	 				<li>Worked with University Ridge Golf Course to make a custom xc ski trail map</li>
 					<li>Produced science and weather graphics for a meteorology textbook</li>
 					<li>Finished <a href="http://wisconsindot.gov/Pages/travel/bike/bike-maps/county.aspx" target="_blank">statewide</a> and <a href="http://wisconsindot.gov/Pages/travel/bike/bike-maps/grr.aspx" target="_blank">Great River Road</a> bike trail maps for the Wisconsin DOT</li>
 					<li>Worked independently, communicated with clients, and met deadlines</li>
@@ -177,7 +186,7 @@
 	 				<li>Updated and maintained geodatabases</li>
 	 				<li>Automated tasks and documented progress using Python scripts</li>
 					<li>Interpreted aerial imagery</li>
-					<li>Updated <a href="https://www.cityofsunprairie.com/435/Downloadable-Maps" target="_blank">city maps</a> for public and departmental use</li>
+					<li>Updated city maps for public and departmental use</li>
 	 			</ul>
 	 		</div>
  		</div>
@@ -248,7 +257,7 @@
 				</a>
 			</div>
 			<div class="col-lg-6">
-				<a class="portfolio-item" href="https://a.tiles.mapbox.com/v4/clittle.o4b8lckm/page.html?access_token=pk.eyJ1IjoiY2xpdHRsZSIsImEiOiJfYkY5bnRrIn0.i60Bbb_HNAGMpJfUVMZJoQ#14/51.4604/5.7904">
+				<a class="portfolio-item">
 					<span class="caption"></span>
 					<img class="img-fluid" src="/img/mario-sm.png" alt="">
 				</a>
