Added RP3 interactive map

--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
  		</div>
 		<div class="row gallery-row">
 			<div class="col-lg-6">
+				<a class="portfolio-item" href="https://callalittle.github.io/rp3PermitSales/" target="_blank">
+					<span class="caption"></span>
+					<img class="img-fluid" src="/img/rp3-permits-sm.png" alt="RP3 Permit Sales" title="View RP3 Sales Live">
+				</a>
+			</div>
+			<div class="col-lg-6">
 				<a class="portfolio-item" href="https://callalittle.github.io/greenbayfloodviz/" target="_blank">
 					<span class="caption"></span>
 					<img class="img-fluid" src="/img/flood-viewer-sm.png" alt="Green Bay flood viewer" title="View Flood Viewer Live">
