--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  		<div class="row justify-content-center">
  			<div class="col-xl-8 text-center">
 	 			<p>
-					I am a GIS professional who loves programming, cartography, remote sensing, and data analysis. I like challenging environments that encourage me to learn new skills. In my free time I enjoy participating in citizen science, camping, hiking, lazing about outdoors, making stuff, playing with my border collie, and dreaming up tools I think I could build but probably never will.
+					I am a GIS professional who loves programming, cartography, remote sensing, and data analysis. I like challenging environments that encourage me to learn new skills. In my free time I enjoy participating in citizen science, camping, hiking, making stuff, and playing with my border collie.
 	 			</p>
 	 		</div>
  		</div>
