Update copyright and links
Copyright 2023
Social links now open in new tab. Removed spotify link.

--- a/index.html
+++ b/index.html
@@ -280,25 +280,22 @@
  				<h2>Get In Touch</h2>
 	 			<ul class="list-inline list-icons text-center">
 		            <li class="list-inline-item">
-		              <a href="https://www.linkedin.com/in/calla-little-b4b2b6ab/">
+		              <a href="https://www.linkedin.com/in/calla-little-b4b2b6ab/" target="_blank">
 		              	<i class="fab fa-linkedin"></i>
 		              </a>
 
 		              <a href="mailto:clittle723@gmail.com">
 		              	<i class="far fa-envelope"></i>
 		              </a>
-		              <a href="https://www.instagram.com/callalittle/">
+		              <a href="https://www.instagram.com/callalittle/" target="_blank">
 		              	<i class="fab fa-instagram"></i>
 		              </a>
-		              <a href="https://github.com/CallaLittle">
+		              <a href="https://github.com/CallaLittle" target="_blank">
 		              	<i class="fab fa-github-square"></i>
 		              </a>
-		              <!-- <a href="https://open.spotify.com/user/clittle723">
-		              	<i class="fab fa-spotify"></i>
-		              </a> -->
 		            </li>
 		        </ul>
-		        <h6>&copy; Calla Little 2022
+		        <h6>&copy; Calla Little 2023
  			</div>
  		</div>
 	</footer>
